--- a/versions/build.gradle
+++ b/versions/build.gradle
@@ -6,7 +6,8 @@ buildscript {
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-        classpath "com.moowork.gradle:gradle-node-plugin:0.12"
+        classpath "com.moowork.gradle:gradle-node-plugin:0.13"
+        classpath "org.grails.plugins:hibernate5:6.0.4"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.11.6"
         classpath "org.grails.plugins:views-gradle:1.1.2"
     }
@@ -54,10 +55,14 @@ dependencies {
     compile "org.grails:grails-logging"
     compile "org.grails.plugins:cache"
     compile "org.grails:grails-plugin-gsp"
+    compile "org.grails.plugins:hibernate5"
+    compile "org.hibernate:hibernate-core:5.1.2.Final"
+    compile "org.hibernate:hibernate-ehcache:5.1.2.Final"
     compile "org.grails.plugins:views-json"
     compile "org.grails.plugins:views-json-templates"
     console "org.grails:grails-console"
     profile "org.grails.profiles:webpack"
+    runtime "com.h2database:h2"
     runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.11.6"
     testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
@@ -67,12 +72,14 @@ dependencies {
 }
 
 bootRun {
-    jvmArgs = ['-Dspring.output.ansi.enabled=always']
-}node {
+    jvmArgs('-Dspring.output.ansi.enabled=always')
+}
+
+/* webpack profile */
+
+node {
     version = '6.9.1'
-    npmVersion = '3.10.8'
     download = true
-    nodeModulesDir = file("${project.projectDir}")
 }
 
 task bundle {
@@ -83,9 +90,9 @@ task webpack {
     dependsOn(['npmInstall', 'npm_run_webpack'])
 }
 
-
 bootRun.dependsOn(['bundle'])
 assetCompile.dependsOn(['bundle'])
+
 
 assets {
     minifyJs = true
