--- a/versions/package.json
+++ b/versions/package.json
@@ -11,7 +11,7 @@
     "bundle": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "webpack": "1.13.2"
   }
