--- a/versions/build.gradle
+++ b/versions/build.gradle
@@ -9,7 +9,6 @@ buildscript {
         classpath "com.moowork.gradle:gradle-node-plugin:1.1.1"
         classpath "org.grails.plugins:hibernate5:${gormVersion-".RELEASE"}"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.14.2"
-        classpath "org.grails.plugins:views-gradle:1.1.6"
     }
 }
 
@@ -20,10 +19,9 @@ apply plugin:"eclipse"
 apply plugin:"idea"
 apply plugin:"war"
 apply plugin:"org.grails.grails-web"
-apply plugin:"org.grails.grails-gsp"
 apply plugin:"com.moowork.node"
 apply plugin:"asset-pipeline"
-apply plugin:"org.grails.plugins.views-json"
+apply plugin:"org.grails.grails-gsp"
 
 repositories {
     mavenLocal()
@@ -36,22 +34,22 @@ dependencies {
     compile "org.grails:grails-core"
     compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "org.springframework.boot:spring-boot-starter-tomcat"
-    compile "org.grails:grails-plugin-url-mappings"
-    compile "org.grails:grails-plugin-rest"
-    compile "org.grails:grails-plugin-codecs"
-    compile "org.grails:grails-plugin-interceptors"
-    compile "org.grails:grails-plugin-services"
-    compile "org.grails:grails-plugin-datasource"
-    compile "org.grails:grails-plugin-databinding"
     compile "org.grails:grails-web-boot"
     compile "org.grails:grails-logging"
+    compile "org.grails:grails-plugin-rest"
+    compile "org.grails:grails-plugin-databinding"
+    compile "org.grails:grails-plugin-i18n"
+    compile "org.grails:grails-plugin-services"
+    compile "org.grails:grails-plugin-url-mappings"
+    compile "org.grails:grails-plugin-interceptors"
     compile "org.grails.plugins:cache"
     compile "org.grails.plugins:async"
+    compile "org.grails.plugins:scaffolding"
     compile "org.grails:grails-plugin-gsp"
+    compile "org.grails.plugins:events"
     compile "org.grails.plugins:hibernate5"
     compile "org.hibernate:hibernate-core:5.1.5.Final"
-    compile "org.grails.plugins:views-json"
-    compile "org.grails.plugins:views-json-templates"
+    compile "org.grails.plugins:gsp"
     console "org.grails:grails-console"
     profile "org.grails.profiles:webpack"
     runtime "org.glassfish.web:el-impl:2.1.2-b03"
@@ -60,7 +58,6 @@ dependencies {
     runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.14.2"
     testCompile "org.grails:grails-gorm-testing-support"
     testCompile "org.grails.plugins:geb"
-    testCompile "org.grails:grails-datastore-rest-client"
     testCompile "org.grails:grails-web-testing-support"
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
